--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,21 @@
 @tailwind preflight;
+@tailwind components;
 @tailwind utilities;
 
 body {
   @apply font-sans;
   @apply bg-blue-dark;
   @apply text-white;
+}
+
+.booking-form-input-icon {
+  top: 1.7em;
+  left: 0.5em;
+  pointer-events: none;
+}
+
+@media only screen and (max-width: 576px) {
+  .booking-form-input-icon {
+    top: 0.7em;
+  }
 }
