--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,9 +19,29 @@ body {
   @apply text-grey-darker;
 }
 
+.booking-exchange-icon {
+  top: 1.9em;
+  right: -1.1em;
+}
+
+.booking-search-btn {
+  width: 100%;
+  padding: 0.6em;
+}
+
 @media only screen and (max-width: 576px) {
   .booking-form-input-icon {
     top: 0.7em;
+  }
+
+  .booking-exchange-icon {
+    top: 0.7em;
+    right: -1.3em;
+    transform: rotate(90deg);
+  }
+
+  .booking-search-btn {
+    width: 75%
   }
 }
 
