--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,3 +29,11 @@ body {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
 }
+
+.map-container {
+  height: 50em;
+}
+
+.map-container > div {
+  height: 100%;
+}
