--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,8 @@ body {
 }
 
 .booking-search-btn {
-  width: 100%;
+  @apply font-semibold text-white rounded;
+  width: 100%
   padding: 0.6em;
 }
 
